--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "3.2.21", features = ["derive"] }
 ssh2 = { version = "0.9.3" }
 home = "0.5.4"
 indicatif = "0.11.0"
+oracle = "0.5"
