--- a/example.env
+++ b/example.env
@@ -1,2 +1,5 @@
 DATABASE_URL=orcl-prod.czm6jsxq8pxx.us-east-1.rds.amazonaws.com:1521/orcl
 DATABASE_PWD=1
+SERVER_URL=ec2-52-202-145-226.compute-1.amazonaws.com:22
+SERVER_USR=
+SERVER_PWD=
